# go2_description

./: CMakeLists.txt  package.xml
config/ros_control/: ros2_control_go2.yaml
launch/gazebo/: gazebo.launch.py  spawn_go2.launch.py  stand_up_go2.launch.py
urdf/: gazebo.urdf.xacro  go2.urdf.xacro  go2_description.urdf  go2_description.urdf.xacro  leg.urdf.xacro  ros2_control_macro.xacro
xacro/: camera_simulation.xacro  gazebo.xacro  leg.xacro  robot.urdf.xacro
